fix text alignment

--- a/public/css/layout.scss
+++ b/public/css/layout.scss
@@ -1088,9 +1088,6 @@ section {
             justify-content: space-between;
         }
 
-        li {
-            text-align: center;
-        }
     }
 }
 
